# DislScatCubFITMisfit

./: .gitignore  CMakeLists.txt  default.cfg  default.inp
src/: IntensityCalculator.cpp  IntensityCalculator.h  Makefile  RelaxedInterface.cpp  RelaxedInterface.h  SettingsReader.cpp  SettingsReader.h  main.cpp
src/Log/: Log.cpp  Log.h
src/StringTools/: StringTools.cpp  StringTools.h
test_result/: .gitignore  data.cfg  default.prop  fit.cfg  reflections.cfg  sample.cfg  settings.cfg
test_scan/: Capellini_1812_RSM_400_Ge_scPAR.csv  Capellini_1812_RSM_400_Ge_scPER.csv  Capellini_1812_RSM_422_Ge_scPAR.csv  Capellini_1812_RSM_422_Ge_scPER.csv
